# tide_code

./: .env.EXAMPLE  .gitignore  .npmrc  LICENSE  PROJECT.md  QUICKSTART.md  README.md  TIDE.md  TUTORIAL.md  WIN.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json
.github/workflows/: build-windows.yml  ci.yml  release.yml
.tide/: index.db  index.db-shm  index.db-wal  router-config.json
.tide/phases/: phase5.json  phase6.json  phase6b.json  phase7.json  phase8.json  phase9.json
apps/desktop/: index.html  latest.json  package.json  readme-new.md  tsconfig.json  vite.config.ts
apps/desktop/pi-extensions/: tide-auth.ts  tide-classify.ts  tide-context.ts  tide-expert-comms.ts  tide-experts.ts  tide-index.ts  tide-planner.ts  tide-project.ts  tide-router.ts  tide-safety.ts  tide-session.ts  tide-subagent.ts  tide-web-search.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  TIDE.md  tauri.conf.json
apps/desktop/src-tauri/.tide/: tide.db
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/pi-extensions/: tide-auth.ts  tide-classify.ts  tide-index.ts  tide-planner.ts  tide-project.ts  tide-router.ts  tide-safety.ts  tide-session.ts  tide-web-search.ts
apps/desktop/src-tauri/src/: git.rs  ipc.rs  keychain.rs  lib.rs  main.rs  orchestrator.rs  pty.rs  sidecar.rs
apps/desktop/src-tauri/src/indexer/: mod.rs  parser.rs  query.rs  schema.rs  symbols.rs  watcher.rs
apps/desktop/src/components/: ErrorBoundary.tsx  GlobalLoader.tsx  Toasts.tsx
apps/desktop/src/components/AgentPanel/: AgentPanel.module.css  AgentPanel.tsx  ChangesetViewer.tsx  ClarifyCard.tsx  LogsTab.tsx  MessageRenderer.tsx  PipelineProgress.tsx  PlanTab.tsx  SessionHistoryTab.tsx
apps/desktop/src/components/AppBar/: AppBar.module.css  AppBar.tsx
apps/desktop/src/components/Approval/: ApprovalDialog.tsx
apps/desktop/src/components/CommandPalette/: CommandPalette.module.css  CommandPalette.tsx
apps/desktop/src/components/ContextInspector/: ContextInspector.tsx
apps/desktop/src/components/ContextMenu/: ContextMenu.module.css  ContextMenu.tsx
apps/desktop/src/components/Dashboard/: Dashboard.tsx
apps/desktop/src/components/DiffPreview/: DiffPreview.tsx
apps/desktop/src/components/Editor/: EditorTabs.module.css  EditorTabs.tsx  MonacoEditor.tsx  useRegionTags.ts
apps/desktop/src/components/ExpertsPanel/: SynthesisView.tsx
apps/desktop/src/components/FileTree/: FileIcon.tsx  FileTree.module.css  FileTree.tsx
apps/desktop/src/components/Layout/: SplitPane.module.css  SplitPane.tsx
apps/desktop/src/components/SearchPanel/: SearchPanel.module.css  SearchPanel.tsx
apps/desktop/src/components/Settings/: GeneralSettings.tsx  KeyboardShortcuts.tsx  LocalModelsSettings.tsx  OrchestratorSettings.tsx  ProviderSettings.tsx  RoutingSettings.tsx  SafetyPlaceholder.tsx  SettingsModal.tsx  SkillsPlaceholder.tsx
apps/desktop/src/components/StatusBar/: ContextDial.tsx  CostIndicator.tsx  (+3 more)
apps/desktop/src/lib/: appThemes.ts  fileHelpers.ts  fuzzyMatch.ts  ipc.ts  keychain.ts  pi-events.ts  routerClassifier.ts  terminalThemes.ts  updater.ts
apps/desktop/src/stores/: approvalStore.ts  commandStore.ts  contextStore.ts  engine.ts  indexStore.ts  logStore.ts  orchestrationStore.ts  permissionStore.ts  planStore.ts  regionTagStore.ts  searchStore.ts  settingsStore.ts  stream.ts  terminalStore.ts  toastStore.ts  ui.ts  workspace.ts
apps/desktop/src/styles/: global.css
docs/: RELEASING.md  WINDOWS_SIGNING.md
scripts/: build-sidecar.ps1  build-sidecar.sh  bump-version.sh
(+4 files in other folders)
