[package]
name = "tide-desktop"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
git2 = { version = "0.19", features = ["vendored-openssl", "vendored-libgit2"] }

# Phase 8: Native Code Index (tree-sitter)
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ignore = "0.4"
regex = "1"
portable-pty = "0.8"
dirs = "5"
# Local-LLM detection (probe Ollama/OpenAI-compatible endpoints). Already in the tree
# transitively via tauri-plugin-updater; rustls avoids an OpenSSL build dependency.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# macOS: rely on notify's default FSEvents backend (already declared above).
# Do NOT re-enable `macos_kqueue` — kqueue opens one fd per watched file, which
# on workspaces with target/ + node_modules/ exhausts the parent's fd table and
# breaks any subsequent posix_spawn (EBADF on Restart Agent, install_cli, etc.).

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
